Apply fixes on mobile portrait

--- a/themes/motocross-enduro-parts/resources/css/_generic.base.css
+++ b/themes/motocross-enduro-parts/resources/css/_generic.base.css
@@ -70,7 +70,7 @@ $breakpoint-tablet-portrait {
 
 /* Mobile */
 
-$breakpoint-mobile {
+$breakpoint-mobile-portrait {
 	h1 { font-size: 20px; }
 	h2 { font-size: 18px; }
 	h3 { font-size: 16px; }
