--- a/themes/motocross-enduro-parts/resources/css/_module.footer.css
+++ b/themes/motocross-enduro-parts/resources/css/_module.footer.css
@@ -28,11 +28,13 @@ $breakpoint-tablet-portrait {
 
 	.footer .footer__text { width: 45%; }
 	.footer .footer__contacts { width: 45%; text-align: center; }
+
+	.footer .footer__text hr { max-width: 250px; margin: 0 auto 10px; }
 }
 
 /* Mobile */
 
-$breakpoint-mobile {
+$breakpoint-mobile-portrait {
 	.footer .footer__body { padding: 20px 0; }
 	
 	.footer .footer__text,
@@ -42,7 +44,6 @@ $breakpoint-mobile {
 	.footer .footer__logo { margin-bottom: 40px; }
 
 	.footer .footer__text p { font-size: 15px; }
-	.footer .footer__text hr { max-width: 200px; margin: 0 auto 10px; }
 	
 	.footer .footer__copyright { padding: 15px 0; }
 	.footer .footer__copyright p { font-size: 15px; }
