--- a/themes/motocross-enduro-parts/resources/css/_module.ico.css
+++ b/themes/motocross-enduro-parts/resources/css/_module.ico.css
@@ -15,7 +15,7 @@
 
 /* Mobile */
 
-$breakpoint-mobile {
+$breakpoint-mobile-portrait {
 	.ico-phone,
 	.ico-mail { width: 30px; height: 30px; }
 }
