--- a/themes/motocross-enduro-parts/resources/css/_module.icotext.css
+++ b/themes/motocross-enduro-parts/resources/css/_module.icotext.css
@@ -40,7 +40,7 @@
 
 /* Mobile */
 
-$breakpoint-mobile {
+$breakpoint-mobile-portrait {
     [class^="icotext"] { justify-content: center; font-size: 18px; font-weight: 500; margin-bottom: 10px; }
 
     [class^="icotext"] i { margin-right: 5px; }
