--- a/themes/motocross-enduro-parts/resources/css/_module.logo.css
+++ b/themes/motocross-enduro-parts/resources/css/_module.logo.css
@@ -14,6 +14,6 @@ $breakpoint-tablet-portrait {
 
 /* Mobile */
 
-$breakpoint-mobile {
+$breakpoint-mobile-portrait {
 	.logo-alt { width: 150px; height: 176px; }
 }
