--- a/themes/motocross-enduro-parts/resources/css/_module.section.css
+++ b/themes/motocross-enduro-parts/resources/css/_module.section.css
@@ -49,7 +49,7 @@ $breakpoint-small-desktop {
 
 /* Mobile */
 
-$breakpoint-mobile {
+$breakpoint-mobile-portrait {
 	.section-search-parts { padding: 20px 0; }
 
 	.section-search-parts .section__inner { padding: 20px 15px 30px; }
